Add check email information endpoint